# emmetify-py-web

./: .flake8  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: publish-pypi.yml  tests.yml
emmetify/: __init__.py  __main__.py  emmetifier.py  main.py
emmetify/cli/: html2emmet.py
emmetify/cmd/: html2emmet.py
emmetify/config/: __init__.py  base_config.py  html_config.py
emmetify/converters/: base_converter.py  html_converter.py
emmetify/nodes/: base_nodes.py  html_nodes.py
emmetify/parsers/: __init__.py  base_parser.py  html_parser.py
emmetify/utils/: xpath.py
examples/: README.md
examples/openai-web-extraction-agent/: README.md  openai-web-extraction-agent.py  prompt.txt
tests/: emmetifier_test.py  utils.py
tests/converters/html_converter/: html_converter_complex_test.py  html_converter_text_nodes.py  html_converter_with_absolute_link_optimization_test.py  html_converter_with_class_optimization_test.py  html_converter_with_image_optimization_test.py  html_converter_with_link_optimization_test.py  html_converter_with_relative_link_optimization_test.py  html_priority_attribute_filter_test.py
tests/utils/: xpath_restore_all_test.py  xpath_restore_classes_test.py  xpath_restore_images_test.py  xpath_restore_links_test.py
web/server/: main.py
web/ui/: package.json
web/ui/src/: App.vue
