[tool.poetry]
name = "emmetify"
version = "0.1.0"
description = ""
authors = ["Mariusz Korzekwa <mariusz@korzekwa.dev>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"
pytest = "^8.3.3"
beautifulsoup4 = "^4.12.3"
lxml = "^5.3.0"
py-emmet = "^1.3.1"
faker = "^30.8.2"
pydantic = "^2.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
